--- a/Encontrar_error.html
+++ b/Encontrar_error.html
@@ -8,6 +8,6 @@
 <body>
     <h1>Bienvenido a la Tienda</h1>
 
-    <input type="text" class="busqueda" 
+    <input type="text" class="busqueda" placeholder="Buscar productos...">
 </body>
 </html>
