--- a/Encontrar_error.html
+++ b/Encontrar_error.html
@@ -9,5 +9,9 @@
     <h1>Bienvenido a la Tienda</h1>
 
     <input type="text" class="busqueda" placeholder="Buscar productos...">
+
+    <div class="filtros">
+        
+    </div>
 </body>
 </html>
