--- a/Encontrar_error.html
+++ b/Encontrar_error.html
@@ -11,7 +11,7 @@
     <input type="text" class="busqueda" placeholder="Buscar productos...">
 
     <div class="filtros">
-        
+        <label></label>
     </div>
 </body>
 </html>
