--- a/Encontrar_error.html
+++ b/Encontrar_error.html
@@ -12,7 +12,8 @@
 
     <div class="filtros">
         <label><input type="checkbox">Electronica</label>
-        <label><input type="checkbox"></label>
+        <label><input type="checkbox">Ropa</label>
+        <label></label>
     </div>
 </body>
 </html>
