--- a/Encontrar_error.html
+++ b/Encontrar_error.html
@@ -13,7 +13,7 @@
     <div class="filtros">
         <label><input type="checkbox">Electronica</label>
         <label><input type="checkbox">Ropa</label>
-        <label></label>
+        <label><input type="checkbox" disabled></label>
     </div>
 </body>
 </html>
