--- a/Encontrar_error.html
+++ b/Encontrar_error.html
@@ -13,7 +13,11 @@
     <div class="filtros">
         <label><input type="checkbox">Electronica</label>
         <label><input type="checkbox">Ropa</label>
-        <label><input type="checkbox" disabled></label>
+        <label><input type="checkbox" disabled> Juegos</label>
     </div>
+
+    <ul class="productos">
+        
+    </ul>
 </body>
 </html>
