--- a/Encontrar_error.html
+++ b/Encontrar_error.html
@@ -17,7 +17,7 @@
     </div>
 
     <ul class="productos">
-        <li class="producto"> </li>
+        <li class="producto"> Producto A - $1000 </li>
     </ul>
 </body>
 </html>
