li class agregado

--- a/Encontrar_error.html
+++ b/Encontrar_error.html
@@ -18,6 +18,7 @@
 
     <ul class="productos">
         <li class="producto"> Producto A - $1000 <button>Comprar</button> </li>
+        <li class="producto"></li>
     </ul>
 </body>
 </html>
