--- a/Encontrar_error.html
+++ b/Encontrar_error.html
@@ -19,7 +19,7 @@
     <ul class="productos">
         <li class="producto"> Producto A - $1000 <button>Comprar</button> </li>
         <li class="producto"> Producto B - $1500 <button>Comprar</button></li>
-        <li class="producto"> Producto C - $2000</li>
+        <li class="producto"> Producto C - $2000 <button>Comprar</button></li>
     </ul>
 </body>
 </html>
