--- a/Encontrar_error.html
+++ b/Encontrar_error.html
@@ -20,6 +20,7 @@
         <li class="producto"> Producto A - $1000 <button>Comprar</button> </li>
         <li class="producto"> Producto B - $1500 <button>Comprar</button></li>
         <li class="producto"> Producto C - $2000 <button>Comprar</button></li>
+        <li class="producto destacado"></li>
     </ul>
 </body>
 </html>
