--- a/Encontrar_error.html
+++ b/Encontrar_error.html
@@ -22,5 +22,9 @@
         <li class="producto"> Producto C - $2000 <button>Comprar</button></li>
         <li class="producto destacado"> Producto D - $2500 <button disabled>Agotado</button></li>
     </ul>
+
+    <form class="formulario">
+        
+    </form>
 </body>
 </html>
