--- a/Encontrar_error.html
+++ b/Encontrar_error.html
@@ -24,7 +24,7 @@
     </ul>
 
     <form class="formulario">
-        <input type="text"
+        <input type="text" placeholder="Nombre">
     </form>
 </body>
 </html>
