--- a/Encontrar_error.html
+++ b/Encontrar_error.html
@@ -25,6 +25,7 @@
 
     <form class="formulario">
         <input type="text" placeholder="Nombre">
+        <input type="email"
     </form>
 </body>
 </html>
