--- a/Encontrar_error.html
+++ b/Encontrar_error.html
@@ -25,7 +25,7 @@
 
     <form class="formulario">
         <input type="text" placeholder="Nombre">
-        <input type="email"
+        <input type="email" placeholder="Correo electronico">
     </form>
 </body>
 </html>
