--- a/Encontrar_error.html
+++ b/Encontrar_error.html
@@ -26,6 +26,7 @@
     <form class="formulario">
         <input type="text" placeholder="Nombre">
         <input type="email" placeholder="Correo electronico">
+        <button type="submit">Enviar</button>
     </form>
 </body>
 </html>
